--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
-# Preface {.unnumbered}
+# About me {.unnumbered}
 
-This is a Quarto book.
+Tell you later :)
 
 To learn more about Quarto books visit <https://quarto.org/docs/books>.
