--- a/index.tex
+++ b/index.tex
@@ -164,7 +164,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={learningDiary},
-  pdfauthor={Norah Jones},
+  pdfauthor={Xiaoyi Chens},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -173,12 +173,12 @@
   pdfcreator={LaTeX via pandoc}}
 
 \title{learningDiary}
-\author{Norah Jones}
+\author{Xiaoyi Chens}
 \date{2024-01-18}
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, frame hidden, boxrule=0pt, interior hidden, enhanced, sharp corners, breakable]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, enhanced, sharp corners, frame hidden, breakable]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -188,13 +188,13 @@
 }
 \bookmarksetup{startatroot}
 
-\hypertarget{preface}{%
-\chapter*{Preface}\label{preface}}
-\addcontentsline{toc}{chapter}{Preface}
+\hypertarget{about-me}{%
+\chapter*{About me}\label{about-me}}
+\addcontentsline{toc}{chapter}{About me}
 
-\markboth{Preface}{Preface}
+\markboth{About me}{About me}
 
-This is a Quarto book.
+Tell you later :)
 
 To learn more about Quarto books visit
 \url{https://quarto.org/docs/books}.
