--- a/intro.qmd
+++ b/intro.qmd
@@ -1,5 +1,37 @@
-# Introduction
+# Week1 - Introduction of RS
 
-This is a book created from markdown and executable code.
+## Beginning
 
-See @knuth84 for additional discussion of literate programming.
+-   **文档目的**：介绍远程感知的基本概念和应用
+
+-   **文档内容**：
+
+    -   远程感知的定义、分类和平台
+
+    -   电磁波与地球表面的相互作用
+
+    -   远程感知数据的四个分辨率：空间、光谱、时间和辐射
+
+    -   远程感知数据的格式、选择和限制
+
+    -   远程感知数据的实际案例和分析方法
+
+主要介绍了如何使用遥感数据进行基本的图像分析和处理。这网页内容的大纲如下：
+
+-   **1.1 学习目标**：列出了本节实验的主要目标，包括获取、加载和区分Landsat和Sentinel数据，进行基本的栅格图像统计和处理，评估使用不同软件的优缺点，提取和比较光谱特征等。
+
+-   **1.2 资源**：提供了本节实验所需的一些参考资料和链接，包括遥感原理、电磁波谱和遥感传感器的介绍，以及一些相关的网站和视频。
+
+-   **1.3 EO dashboard**：介绍了一个展示地球观测数据的网站，要求学生花5分钟浏览并了解一些遥感数据的应用。
+
+-   **1.4 .gitignore**：介绍了如何使用.gitignore文件来忽略一些大型数据文件，避免在使用Git和GitHub时出现错误或问题。
+
+-   **1.4.1 Sentinel下载**：介绍了如何从Copernicus Open Access Hub网站上下载Sentinel-2 L2A数据，以及如何在QGIS中打开和探索数据，包括创建真彩色合成图像，提取光谱特征，制作栅格堆叠等。
+
+-   **1.4.1.2 SNAP**：介绍了一个专门用于预处理和分析遥感数据的工具箱，以及如何在SNAP中加载、显示、统计和变换数据，包括创建假彩色合成图像，绘制散点图，进行帽子变换等。
+
+-   **1.4.1.2.7 Masking and resampling**：介绍了如何使用矢量数据来裁剪和重采样栅格数据，以便只分析感兴趣的区域和波段。
+
+-   **1.4.2 Landsat**：介绍了如何从EarthExplorer网站上下载Landsat 8-9 OLI/TIRS C2 L2数据，以及如何在SNAP中与Sentinel数据进行比较，包括选择感兴趣的点，提取光谱特征，绘制光谱曲线等。
+
+-   **1.4.3 Spectral signatures**：介绍了如何使用R语言来处理和分析遥感数据，包括加载、裁剪、重采样、提取、汇总、绘图等操作，以及如何比较不同传感器和不同地物的光谱特征
