--- a/intro.qmd
+++ b/intro.qmd
@@ -18,7 +18,7 @@ title: "Week1 - Introduction of RS"
 
 这很容易让我联想到我过去本科期间自学到的RS的基础概念，我相信这门课不仅能帮助我温习过去的知识，还能充分补充其他的知识。
 
-## Summary of week 1 class
+## Summary of this class
 
 -   **远程感知城市和环境**：这是一门介绍远程感知基本原理和应用的课程，主要关注城市和环境问题。
 
@@ -26,45 +26,14 @@ title: "Week1 - Introduction of RS"
 
 -   **远程感知数据的格式和分辨率**：远程感知数据通常是栅格数据，有不同的存储格式和组织方式。远程感知数据的质量和应用受到空间、光谱、时间和辐射分辨率的制约。
 
--   [Module housekeeping (locations, timings etc)^5^](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C4%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Module%20hou...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A4%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A4%2C%22highlightText%22%3A%22Module%20housekeeping%20(locations%2C%22%2C%22snippets%22%3A%5B%5D%7D%7D)
+## 遥感的基本概念与原理
 
--   
+### 被动传感器与主动传感器的区别
 
--   [Module aims + objectives^6^](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C5%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Module%20aim...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A4%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A6%2C%22highlightText%22%3A%22Module%20aims%20%2B%20objectives%22%2C%22snippets%22%3A%5B%5D%7D%7D)
+**两者的区别在于**：被动传感器受大气散射的影响，需要在光照条件良好的时候工作，而主动传感器可以穿透云层、火山灰和大气条件，可以在夜间工作。
 
--   
+**我能找到的关于主动传感器的例子**是合成孔径雷达（SAR），可以“看穿云层”，并且具有极化特性，可以根据表面的粗糙度、形状、方向、湿度、盐度、密度等反映出不同的电磁波。
 
--   Module assessment
+### 关于电磁波
 
--   
-
--   [Introduction to remote sensing^3^](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C2%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Introducti...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A4%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A8%2C%22highlightText%22%3A%22Introduction%20to%20remote%20sensing%22%2C%22snippets%22%3A%5B%5D%7D%7D)^[2](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C1%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Lecture%201%3A...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A1%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A2%2C%22highlightText%22%3A%22Lecture%201%3A%20An%20Introduction%20to%20Remote%20Sensing%22%2C%22snippets%22%3A%5B%5D%7D%7D)^
-
--   
-
--   Questions
-
-Practical
-
--   
-
--   
-
-```{=html}
-<!-- -->
-```
--   
-
--   [Loading Landsat and Sentinel data^7^](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C6%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Loading%20La...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A61%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A2%2C%22highlightText%22%3A%22Loading%20Landsat%20and%20Sentinel%20data%22%2C%22snippets%22%3A%5B%5D%7D%7D)
-
--   
-
--   [Exploring SNAP and R^8^](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C7%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Exploring%20...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A61%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A3%2C%22highlightText%22%3A%22Exploring%20SNAP%20and%20R%22%2C%22snippets%22%3A%5B%5D%7D%7D)
-
--   
-
--   [Selecting regions of interest^9^](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C8%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Selecting%20...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A61%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A4%2C%22highlightText%22%3A%22Selecting%20regions%20of%20interest%22%2C%22snippets%22%3A%5B%5D%7D%7D)
-
--   
-
--   [Plotting spectral signatures^10^](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsmrefresh,cspgrd,&shellsig=f9924b4ffaf0774b07b05369f13bbff3394eea42&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C9%7C48d7c5f0-85b2-49d1-8d84-afc2ab6ec7ad%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Plotting%20s...%22%2C%22pageType%22%3A%22pdf%22%2C%22pageIndex%22%3A61%2C%22relatedPageUrl%22%3A%22file%253A%252F%252F%252FD%253A%252FFile_auto%252F0_UCL_CASA%252FTerm2%252Fcasa0023_RS%252Flecture_slide%252FLecture1_Intro.pdf%22%2C%22lineIndex%22%3A5%2C%22highlightText%22%3A%22Plotting%20spectral%20signatures%22%2C%22snippets%22%3A%5B%5D%7D%7D)
+## Reflection
