--- a/wk9_SAR_data.qmd
+++ b/wk9_SAR_data.qmd
@@ -6,8 +6,30 @@ title: "Week9 - Synthetic Aperture Radar (SAR) data"
 
 This class introduces the basic principle of synthetic aperture radar (SAR), two sensor types, SAR data background, SAR data value, SAR polarization, SAR background, differential interferometric synthetic aperture radar (DlnSAR), SAR data processing, SAR data fusion, SAR image fusion and other concepts. This paper also introduces how to use SAR data for change detection, including statistical test, threshold screening and ROC curve, image fusion and so on. Finally, a change detection algorithm based on SAR data is proposed, and an example is given.
 
-| SAR - Synthetic Aperture Radar | InSAR - Interferometric Synthetic Aperture Radar | DInSAR - Differential Interferometric Synthetic Aperture Radar | PSInSAR - Persistent Scatterer Interferometric SAR |
-|------------------|------------------|-------------------|------------------|
-|                                |                                                  |                                                                |                                                    |
-|                                |                                                  |                                                                |                                                    |
-|                                |                                                  |                                                                |                                                    |
+## Difference of other SAR
+
++----------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| SAR                                                                                                                                          | InSAR                                                                                                  | DInSAR                                                                                                                            | PSInSAR                                                                                                                           |
++==============================================================================================================================================+========================================================================================================+===================================================================================================================================+===================================================================================================================================+
+| Synthetic Aperture Radar                                                                                                                     | Interferometric Synthetic Aperture Radar                                                               | Differential Interferometric Synthetic Aperture Radar                                                                             | Persistent Scatterer Interferometric SAR                                                                                          |
++----------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| -   A radar system capable of producing high-resolution images.                                                                              | -   Analyzes surface deformation by exploiting the phase difference between two remote sensing images. | -   Builds upon InSAR by using phase differences from multiple remote sensing images to improve deformation measurement accuracy. | -   Models and analyzes time series data from multiple SAR images to enhance deformation inversion accuracy.                      |
+|                                                                                                                                              |                                                                                                        |                                                                                                                                   |                                                                                                                                   |
+| -   Uses a “virtual” antenna length to combine echo signals received from different positions, resulting in higher-resolution radar imaging. | -   Calculates the deformation at each pixel on the ground surface between two observations.           | -   Sensitive to deformation, suitable for monitoring ground surface changes due to earthquakes, mining, landslides, etc.         | -   Reveals spatial distribution of surface deformations, widely used for monitoring urban subsidence and infrastructure changes. |
+|                                                                                                                                              |                                                                                                        |                                                                                                                                   |                                                                                                                                   |
+| -   Used for surface observations such as land use, topography, and forest cover.                                                            | -   Reveals elevation and deformation information.                                                     | -   Utilizes two SAR images and external topographic data to measure subtle surface deformations.                                 |                                                                                                                                   |
++----------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+|                                                                                                                                              |                                                                                                        |                                                                                                                                   |                                                                                                                                   |
++----------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+
+## SAR数据的应用
+
+分析两个图像之间的变化（例如比率或对数比率）
+
+[**Open Access Damage Detection Using Sentinel-1 Imagery**](https://oballinger.github.io/PWTT/)
+
+[**Blast Damage Assessment**](https://bellingcat.github.io/RS4OSINT/C3_Blast.html)
+
+通过以下方式查看随时间变化的差异：
+
+[Pixel-Wise T-Test](https://oballinger.github.io/PWTT/paper.html)
