--- a/intro.qmd
+++ b/intro.qmd
@@ -4,7 +4,7 @@ title: "Week1 - Introduction of RS"
 
 ## Beginning
 
-**在开始这门课之前，我需要首先了解这一课程的目的，**是介绍远程感知的基本概念和应用，并且**通过RS这门课，我们即将学习到的内容**包括：
+在开始这门课之前，我需要首先了解这一课程的目的，是介绍远程感知的基本概念和应用，并且**通过**RS这门课，我们即将学习到的内容包括：
 
 -   远程感知的定义、分类和平台
 
