--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,18 @@
 }
 
 
+
+@article{lópez-puigdollers2021,
+	title = {Benchmarking Deep Learning Models for Cloud Detection in Landsat-8 and Sentinel-2 Images},
+	author = {{López-Puigdollers}, Dan and {Mateo-García}, Gonzalo and {Gómez-Chova}, Luis},
+	year = {2021},
+	month = {03},
+	date = {2021-03-05},
+	journal = {Remote Sensing},
+	pages = {992},
+	volume = {13},
+	number = {5},
+	doi = {10.3390/rs13050992},
+	url = {http://dx.doi.org/10.3390/rs13050992},
+	langid = {en}
+}
