--- a/wk2_xaringen.qmd
+++ b/wk2_xaringen.qmd
@@ -3,3 +3,14 @@ title: "Week 2 - Xaringen"
 ---
 
 ## Abstract
+
+```{r echo = FALSE, out.width='40%'}
+xaringanExtra::embed_xaringan( url = "https://chailllee.github.io/learning-diary/wk2_Portfolio.html#1", ratio = "16:9")
+```
+
+```{r}
+#| file: wk2_Portfolio.Rmd 
+#| eval: false 
+#| echo: true 
+#| code-folding: true 
+```
