--- a/wk3_RS_data.qmd
+++ b/wk3_RS_data.qmd
@@ -5,3 +5,49 @@ title: "Week3 - Remote Sensing Data"
 ## Abstract
 
 This lecture mainly provides detailed information on remote sensing cities and environments, especially on the use and processing of remote sensing data, and introduces the correction methods of remote sensing data, including geometric, atmospheric, orthographic/topographic correction and radiometric correction. Prior to this, data processing is required, including data linking and enhancement such as feathering, image enhancement, and other enhancement techniques. In addition to this, this lesson introduces remote sensing technology, explaining the different types of remote sensing sensors, such as push-sweep and scan sensors, and how they work. Practical Guide: Provides a guide on how to use presentation slides, including the use of search tools and the drawing function on slides.
+
+## Summary of Common Remote Sensing Indices
+
+Summary of Common Remote Sensing Indices
+
+In remote sensing analysis, various indices are commonly used to extract information about land cover and land use. Here is a summary of some common remote sensing indices:
+
+1.  Normalized Difference Vegetation Index (NDVI): Used to assess vegetation health and density by comparing the difference between near-infrared (NIR) and red band reflectance.
+
+$$NDVI= \frac{NIR-Red}{NIR+Red}$$
+
+2.  Normalized Difference Water Index (NDWI): Utilized to identify water bodies by comparing the difference between green and near-infrared band reflectance.
+
+$$NDWI = \frac{(Green - NIR)}{(Green + NIR)}$$
+
+3.  Normalized Difference Built-up Index (NDBI): Employed to detect built-up areas by comparing the difference between near-infrared and shortwave infrared band reflectance.
+
+$$NDBI = \frac{(SWIR - NIR)}{(SWIR + NIR)}$$
+
+4.  Soil Adjusted Vegetation Index (SAVI): Similar to NDVI but adjusts for soil background effects, particularly in areas with sparse vegetation cover.
+
+$$SAVI = \frac{((NIR - Red) \times (1 + L))}{(NIR + Red + L)} $$ where ( L ) is the soil adjustment factor.
+
+5.  Enhanced Vegetation Index (EVI): An enhanced version of NDVI that incorporates blue and red-edge bands, providing better sensitivity to high-density vegetation areas.
+
+$$ EVI = G \times \frac{(NIR - Red)}{(NIR + C_1 \times Red - C_2 \times Blue + L)} $$ where *G* is the gain factor, *C_1* and *C_2* are coefficients, and *L* is the canopy background adjustment.
+
+6.  Soil Moisture Index (SMI): Used to estimate soil moisture content and soil wetness conditions in agricultural and hydrological studies.
+
+$$ SMI = \frac{(NIR + SWIR)}{2} $$
+
+7.  Land Surface Temperature and Vegetation Index (LSTVI): Combines information from land surface temperature (LST) and vegetation indices to analyze urban heat island effects and land use changes.
+
+$$LSTVI = \frac{(Tb - NDVI)}{(Tb + NDVI)} $$ where ( Tb ) is the land surface temperature.
+
+These indices play crucial roles in various applications such as land cover classification, vegetation monitoring, and environmental assessments.
+
+## Reflection
+
+During my undergraduate dissertation project, I encountered challenges in processing remote sensing data due to significant smoke obscuring vegetation on the land surface. It was my first experience using Python to convert remote sensing images into multidimensional numerical matrices, where each dimension corresponded to different spectral bands of the original remote sensing data. Interestingly, the principle behind performing band calculations in Python was essentially the same as that of commonly used remote sensing index formulas. I realized that applying index calculation formulas in Python involved performing arithmetic operations such as addition, subtraction, multiplication, and division on these multidimensional numerical matrices.
+
+So this is an example of the band processing I did in my undergraduate program to make the forest fire point more prominent in the image:
+
+![Comparison before and after band optimization](images/clipboard-4252325944.png){fig-alt="Comparison before and after band optimization" fig-align="center"}
+
+This realization underscores the significance of hands-on practice and theoretical knowledge integration in effectively utilizing remote sensing techniques for various environmental analyses and research endeavors.
