--- a/wk6_classification1.qmd
+++ b/wk6_classification1.qmd
@@ -2,34 +2,28 @@
 title: "Week7 - Classification-I"
 ---
 
-## Overfiting
+## Overfitting
 
--   Tree score = SSR + tree penalty (alpha) \* T (number of leaves)
+$$Tree score = SSR + TreePenalty_{alpha}* T_{Mumber Of Leaves}$$
 
-对于Tree score公式，为啥去掉越多leaf, alpha越大？
+For the Tree score formula, why does removing more leaves result in a larger alpha?
 
-在决策树的剪枝过程中，我们使用一个参数称为**ccp_alpha**（cost complexity parameter）来控制剪枝的程度。这个参数的值越大，意味着我们更倾向于剪掉更多的叶节点，从而简化树的结构。
+During the pruning process of decision trees, we use a parameter called ccp_alpha (cost complexity parameter) to control the extent of pruning. A higher value of this parameter indicates a greater tendency to remove more leaf nodes, thereby simplifying the tree structure.
 
-让我们来理解一下为什么去掉越多的叶节点，**ccp_alpha** 就越大：
+Let's understand why removing more leaf nodes leads to a larger ccp_alpha:
 
-1.  **基尼杂质和树的复杂度**：
+### Gini Impurity and Tree Complexity:
 
-    -   基尼杂质是用来衡量数据集纯度的指标，它越小表示数据集的纯度越高。
+Gini impurity is a metric used to measure the purity of a dataset, with smaller values indicating higher purity.
 
-    -   在剪枝过程中，我们希望保留那些对模型性能有积极影响的叶节点，同时减少模型的复杂度。
+During pruning, we aim to retain leaf nodes that positively contribute to the model's performance while reducing the complexity of the model.
 
-    -   当我们去掉一个叶节点时，基尼杂质会增加，因为我们丧失了这个叶节点的纯度。
+When we remove a leaf node, the Gini impurity increases because we lose the purity associated with that leaf node.
 
-2.  **成本复杂度**：
+### Cost Complexity:
 
-**ccp_alpha** 是一个成本复杂度参数，它在剪枝过程中平衡了模型的拟合程度和复杂度。
+ccp_alpha is a cost complexity parameter that balances the fit and complexity of the model during pruning.
 
-当我们增大 **ccp_alpha** 时，模型更倾向于剪掉更多的叶节点，从而减少模型的复杂度。
+By increasing ccp_alpha, the model tends to remove more leaf nodes, thereby reducing the complexity of the model.
 
-这样做的目的是防止过拟合，提高模型的泛化能力。
-
-Youtube video
-
-[How to Prune Regression Trees](https://www.youtube.com/watch?v=D0efHEJsfHo&t=684s "How to Prune Regression Trees")
-
-## Random Forest
+The purpose of this is to prevent overfitting and improve the generalization ability of the model.
