--- a/wk7_classification2.qmd
+++ b/wk7_classification2.qmd
@@ -10,6 +10,6 @@ Here is the overview of remote sensing techniques for classifying and assessing 
 
 -   **Dynamic World**: The page details the process of training, pre-processing, normalization, and classification using CNNs, with a focus on Dynamic World’s semi-supervised approach and regional division for sample stratification.
 
--   [**Sub Pixel Analysis**: It explains the concept of sub pixel classification, spectral mixture analysis, and linear spectral unmixing, including mathematical formulas for calculating the proportion of landcover per pixel](https://edgeservices.bing.com/edgesvc/chat?udsframed=1&form=SHORUN&clientscopes=chat,noheader,udsedgeshop,channelbeta,ntpquery,devtoolsapi,udsinwin11,udsdlpconsent,udsfrontload,cspgrd,&shellsig=02acc0a48f48c193bc6a57dd248ceccfb562b03c&setlang=zh-CN&darkschemeovr=1#sjevt%7CDiscover.Chat.SydneyClickPageCitation%7Cadpclick%7C0%7C0af7ef27-f983-4381-9f81-aa1a7628c202%7C%7B%22sourceAttributions%22%3A%7B%22providerDisplayName%22%3A%22Termed%20(al...%22%2C%22pageType%22%3A%22html%22%2C%22pageIndex%22%3A1%2C%22relatedPageUrl%22%3A%22https%253A%252F%252Fandrewmaclachlan.github.io%252FCASA0023-lecture-7%252F%25231%22%2C%22lineIndex%22%3A103%2C%22highlightText%22%3A%22Termed%20(all%20the%20same)%3A%20Sub%20pixel%20classification%2C%20Spectral%20Mixture%20Analysis%20(SMA)%2C%20Linear%20spectral%20unmixing%22%2C%22snippets%22%3A%5B%5D%7D%7D).
+-   **Sub Pixel Analysis**: It explains the concept of sub pixel classification, spectral mixture analysis, and linear spectral unmixing, including mathematical formulas for calculating the proportion of landcover per pixel.
 
 -   **Accuracy Assessment**: The page outlines various accuracy assessment methods in remote sensing, such as producer’s accuracy, user’s accuracy, overall accuracy, and the Kappa coefficient, along with their definitions and significance.
